# Tiny-Reason

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: evaluate.py  inference.py  train.py
src/: __init__.py  config_parser.py  dataset.py  model.py  trainer.py  utils.py
